# haskell-boilerplate

./: .build-dev.sh  .gitignore  LICENSE  README.md  boilerplate.cabal  build-dev.sh  build.sh  full-build.sh  generate-default.nix.sh  release.nix  shell.nix  test-dev.sh  test.sh
src/exe/: Main.hs
src/lib/: Lib.hs  Spec.hs
